Add DAVE protocol support Update JDK and Kotlin versions